Added spells and stuff

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ repositories {
 dependencies {
     implementation 'io.ktor:ktor-server-core:1.4.0'
     implementation 'io.ktor:ktor-server-netty:1.4.0'
+    implementation "io.ktor:ktor-html-builder:1.4.0"
+
+    implementation 'org.jetbrains:kotlin-css-jvm:+'
 
     implementation 'org.jetbrains.exposed:exposed-core:+'
     implementation 'org.jetbrains.exposed:exposed-dao:+'
